# Fortgeschrittene-Softwaretechnik-Electric-Mobility-Berlin

./: .gitignore  .pre-commit-config.yaml  DATA_QUALITY_ANALYSIS.md  DDD_ARCHITECTURE_REVIEW.md  README.md  check_data.py  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: coverage.yml  formatting.yml  pylint.yml  pytest.yml  security.yml
core/: helper_tools.py  methods.py
docs/: about.py
src/demand/application/dto/: DemandAnalysisDTO.py  __init__.py
src/demand/application/dtos/: DemandAnalysisDTO.py  __init__.py  demand_analysis_dto.py
src/demand/application/event_handlers/: DemandAnalysisEventHandler.py  HighDemandAreaEventHandler.py  __init__.py  demand_analysis_event_handler.py  high_demand_area_event_handler.py
src/demand/application/services/: DemandAnalysisService.py  __init__.py  demand_analysis_service.py
src/demand/domain/: enums.py
src/demand/domain/aggregates/: DemandAnalysisAggregate.py  __init__.py  demand_analysis_aggregate.py
src/demand/domain/enums/: PriorityLevel.py  __init__.py
src/demand/domain/events/: DemandAnalysisCalculatedEvent.py  HighDemandAreaIdentifiedEvent.py  __init__.py  demand_analysis_calculated_event.py
src/demand/domain/services/: DemandCalculationService.py  __init__.py  demand_calculation_service.py
src/demand/domain/value_objects/: DemandPriority.py  Population.py  StationCount.py  __init__.py  demand_priority.py
src/demand/infrastructure/repositories/: DemandAnalysisRepository.py  InMemoryDemandAnalysisRepository.py  __init__.py  demand_analysis_repository.py  in_memory_demand_analysis_repository.py
src/demand/views/: __init__.py  demand_analysis_view.py
src/discovery/application/dtos/: PostalCodeAreaDTO.py  __init__.py  postal_code_area_dto.py
src/discovery/domain/aggregates/: PostalCodeAreaAggregate.py  __init__.py  postal_code_area_aggregate.py
src/discovery/domain/entities/: PostalCode.py
src/discovery/views/: __init__.py  power_capacity_view.py  station_discovery_view.py
src/shared/application/dtos/: PowerCapacityDTO.py  __init__.py  power_capacity_dto.py
src/shared/application/event_handlers/: __init__.py  station_search_event_handler.py
src/shared/application/services/: BaseService.py  ChargingStationService.py  GeoLocationService.py  PostalCodeResidentService.py  PowerCapacityService.py  __init__.py  base_service.py  charging_station_service.py  geo_location_service.py  postal_code_resident_service.py  power_capacity_service.py
src/shared/domain/: constants.py
src/shared/domain/aggregates/: BaseAggregate.py  ResidentDataAggregate.py  __init__.py
src/shared/domain/constants/: __init__.py  infrastructure_thresholds.py  population_thresholds.py  postal_code_thresholds.py  power_thresholds.py
src/shared/domain/entities/: ChargingStation.py  __init__.py  charging_station.py
src/shared/domain/enums/: CapacityCategory.py  PopulationDensityCategory.py  __init__.py  charging_category.py  coverage_assessment.py  coverage_level.py
src/shared/domain/events/: DomainEvent.py  DomainEventBus.py  StationSearchPerformedEvent.py  __init__.py  domain_event_publisher_interface.py  station_search_performed_event.py  stations_found_event.py
src/shared/domain/exceptions/: InvalidGeoLocationException.py  InvalidPostalCodeException.py  __init__.py  invalid_geo_location_exception.py  invalid_postal_code_exception.py
src/shared/domain/services/: CapacityClassificationService.py  PopulationAnalysisService.py  __init__.py  capacity_classification_service.py  population_analysis_service.py
src/shared/domain/value_objects/: GeoLocation.py  PopulationData.py  PostalCode.py  PowerCapacity.py  __init__.py  geo_location.py  postal_code.py  power_capacity.py
src/shared/infrastructure/: __init__.py  logging_config.py
src/shared/infrastructure/event_bus/: __init__.py  in_memory_event_bus.py
src/shared/infrastructure/geospatial/: __init__.py  geopandas_boundary.py
src/shared/infrastructure/repositories/: CSVChargingStationRepository.py  CSVGeoDataRepository.py  CSVPopulationRepository.py  CSVRepository.py  __init__.py  charging_station_repository.py  csv_charging_station_repository.py  csv_geo_data_repository.py  csv_population_repository.py  geo_data_repository.py  population_repository.py
src/shared/views/: __init__.py  about_view.py  components.py
src/ui/application/: StreamlitApp.py  __init__.py  streamlit_app.py
tests/demand/application/: __init__.py
tests/demand/application/event_handlers/: __init__.py  test_demand_analysis_event_handler.py  test_high_demand_area_event_handler.py
tests/demand/application/services/: __init__.py  test_demand_analysis_service.py
tests/demand/domain/: __init__.py
tests/demand/domain/aggregates/: __init__.py  test_demand_analysis_aggregate.py
tests/demand/domain/events/: test_demand_analysis_calculated_event.py  test_high_demand_area_identified_event.py
tests/demand/domain/services/: __init__.py  test_demand_calculation_service.py
tests/demand/domain/value_objects/: __init__.py  test_demand_priority.py  test_population.py  test_station_count.py
tests/demand/infrastructure/repositories/: test_in_memory_demand_analysis_repository.py
tests/discovery/: __init__.py
tests/discovery/domain/aggregates/: __init__.py  test_postal_code_area_aggregate.py
tests/shared/: __init__.py
tests/shared/application/: __init__.py
tests/shared/application/dtos/: test_power_capacity_dto.py
tests/shared/application/event_handlers/: test_station_search_event_handler.py
tests/shared/application/services/: __init__.py  test_base_service.py  test_charging_station_service.py  test_geo_location_service.py  test_postal_code_resident_service.py  test_power_capacity_service.py
tests/shared/domain/: __init__.py
tests/shared/domain/aggregates/: __init__.py  test_base_aggregate.py
tests/shared/domain/entities/: test_charging_station.py
tests/shared/domain/events/: __init__.py  test_domain_event.py  test_idomain_event_publisher.py  test_station_search_performed_event.py  (+1 more)
tests/shared/infrastructure/: __init__.py  test_logging_config.py
(+18 files in other folders)
