[project]
name = "evision-berlin"
authors = [
    { name = "Amaan Shaikh" },
    { name = "Danish Ali Shaikh" },
    { name = "Hrusheekesh Sawarkar" },
    { name = "Melisa Cihan" }
]
maintainers = [
    { name = "Amaan Shaikh" },
    { name = "Danish Ali Shaikh" },
    { name = "Hrusheekesh Sawarkar" },
    { name = "Melisa Cihan" }
]

# PyLint config.
[tool.pylint.format]
max-line-length = 130

[tool.pylint.messages_control]
disable = [
    "C0103", # Variable name doesn't conform to snake_case naming style.
    "R0903", # Too few public methods.
    "R0913", # Too many arguments.
    "R0917", # Too many positional arguments.
    "W0718", # Cacthing too general exception Exception.
    "W0603", # Using global statement.
]

# Task runner config.
[tool.taskipy.tasks]
install = "pip install -r requirements.txt"
lint = "pylint main.py config.py src/"
clean = "python -c \"import shutil, pathlib; [shutil.rmtree(p) for p in pathlib.Path('.').rglob('__pycache__')]\""
run = "streamlit run main.py"
run-clean = "task clean && streamlit run main.py"
test = "python -m pytest tests/ -v"
test-cov = "python -m pytest tests/ -v --cov=src --cov-report=html --cov-report=term-missing"
pull-task = "git stash && git pull origin task/prof-selcan-ipek-ugay && git stash pop"
pull-main = "git stash && git pull origin main && git stash pop"
push-task = "git push origin task/prof-selcan-ipek-ugay"
push-main = "git push origin main"

# Pytest configuration.
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests",
]

# Coverage configuration.
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
