[project]
version = "2.0.0"
name = "evision-berlin"
authors = [
    { name = "Amaan Shaikh" },
    { name = "Danish Ali Shaikh" },
    { name = "Hrusheekesh Sawarkar" },
    { name = "Melisa Cihan" }
]
maintainers = [
    { name = "Amaan Shaikh" },
    { name = "Danish Ali Shaikh" },
    { name = "Hrusheekesh Sawarkar" },
    { name = "Melisa Cihan" }
]

# PyLint config.
[tool.pylint.master]
init-hook = "import sys; sys.path.insert(0, '.')"

[tool.pylint.format]
max-line-length = 130

[tool.pylint.messages_control]
disable = [
    "R0903", # Too few public methods.
    "R0913", # Too many arguments.
    "R0917", # Too many positional arguments.
    "W0406", # Module import itself (import-self).
    "W0603", # Using global statement.
    "W0718", # Catching too general exception Exception.
]

[tool.pylint."messages control"]
# Ignore duplicate code in test files - test setup patterns are often similar
ignore-paths = ["tests/.*/.*_test\\.py$"]

[tool.pylint.similarities]
# Increase minimum lines for duplicate code detection
min-similarity-lines = 10

# Ruff linter and formatter config.
[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = ["htmlcov", ".venv", "venv", "env", ".git"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "PIE", "PT", "Q", "RET", "SIM", "TID", "ARG", "PLE", "PLW", "RUF"]
ignore = [
    "ISC001",  # Conflicts with formatter
    "EM101",   # Allow string literals in exceptions (clearer for simple cases)
    "EM102",   # Allow f-string literals in exceptions (clearer for simple cases)
    "B024",    # Allow ABC without abstract methods (used for interface definition)
    "RET504",  # Allow explicit return variable (clearer intent)
    "ARG005",  # Allow unused lambda arguments (needed for folium style_function signature)
    "RUF001",  # Allow unicode characters (emojis in UI)
    "I001",    # Allow unsorted imports (user preference)
    "UP038",   # Allow (X, Y) in isinstance (more readable than X | Y)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PT011",   # Allow broad pytest.raises (sometimes intentional)
    "B017",    # Allow catching broad Exception in tests
    "SIM108",  # Allow if-else instead of ternary (clearer in tests)
    "DTZ001",  # Allow datetime without timezone in tests
    "C401",    # Allow generator instead of set comprehension
    "PT015",   # Allow assert False with message
]
"docs/about.py" = ["W291"]  # Allow trailing whitespace in documentation
"src/**/repositories/*.py" = ["B024"]  # Repository interfaces don't need abstract methods

# Black formatter config.
[tool.black]
line-length = 120
target-version = ['py313']
extend-exclude = '''
/(
  htmlcov
  | \.venv
  | venv
  | env
  | \.git
)/
'''

# Task runner config.
[tool.taskipy.tasks]
install = "pip install -r requirements.txt"
format = "black ."
format-check = "black . --check"
lint = "pylint main.py config.py src/ tests/"
clean = "python -c \"import shutil, pathlib; [shutil.rmtree(p) for p in pathlib.Path('.').rglob('__pycache__')]\""
run = "streamlit run main.py"
run-clean = "task clean && streamlit run main.py"
test = "python -m pytest tests/ -v"
test-cov = "python -m pytest tests/ -v --cov=src --cov-report=html --cov-report=term-missing"
pull-task = "git stash && git pull origin task/prof-selcan-ipek-ugay && git stash pop"
pull-main = "git stash && git pull origin main && git stash pop"
push-task = "git push origin task/prof-selcan-ipek-ugay"
push-main = "git push origin main"

# Pytest configuration.
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::UserWarning:geopandas.geoseries",
]
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests",
]

# Coverage configuration.
[tool.coverage.run]
source = ["src"]
relative_files = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# MyPy type checker configuration.
[tool.mypy]
python_version = "3.13"
mypy_path = "src"
exclude = ["htmlcov", ".venv", "venv", "env", "scripts"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
files = ["src", "tests"]

# Bandit security linter configuration.
[tool.bandit]
exclude_dirs = ["tests", "htmlcov", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used check globally (asserts are fine in tests)
